--- a/src/index.html
+++ b/src/index.html
@@ -68,10 +68,10 @@
       <!-- *********************************** -->
       <section class="c-benefit">
         <div class="l-container--1200">
-          <h2 class="c-benefit__heading">
+          <p class="c-benefit__heading">
             はじめての家づくりが具体的に進む、<br class="is-only--sp">ご来店の
             <span class="c-benefit__headhighlight">3 つのメリット</span>
-          </h2>
+          </p>
           <h2 class="c-benefit__welcome">WELCOME TO MODELHOUSE</h2>
 
           <div class="c-box">
@@ -127,11 +127,11 @@
                 </picture>
 
                 <div class="c-box__content">
-                  <h3 class="c-box__title">
+                  <h4 class="c-box__title">
                     <%= rec.recHeading %>
-                  </h3>
+                  </h4>
                   <p class="c-box__desc">
-                    <%= rec.recDesc %>
+                    <%- rec.recDesc %>
                   </p>
                 </div>
               </a>
@@ -338,12 +338,12 @@
     <section class="c-visitor">
       <div class="c-visitor__wrapper l-container--1200">
         <div class="c-visitor__top">
-          <h3 class="c-visitor__heading">
+          <h2 class="c-visitor__heading">
             <a href="#" class="c-visitor__link">ご来場のお客様へ</a>
             <span class="c-visitor__head">
               新型コロナウイルス<br class="is-only--sp">感染症予防対策につきまして
             </span>
-          </h3>
+          </h2>
           <p class="c-visitor__desc">
             ウェブココでは新型コロナウイルス<br class="is-only--sp">感染拡大防止のため、対策を講じて<br class="is-only--sp">おりますので安心してご利用ください。
           </p>
